--- a/src/AdvWorkDB/AdvWorkDB.csproj
+++ b/src/AdvWorkDB/AdvWorkDB.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.36" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.36" />
   </ItemGroup>
 
